funtions for load data

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-uglify-es": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
